# heterogenous-system

./: CMakeLists.txt  README.md  main.cu  mandelbrot_cuda.ppm  run.sh  test.cu
balancing/: CMakeLists.txt
balancing/include/: balancing.cuh
balancing/src/: balancing.cu  collaborative.cu  offloading.cu  partitioning.cu  pipelining.cu  stealing.cu  utils.cu
graph/: main.py
log/: matrix.txt  transport.txt
mandelbrot/: CMakeLists.txt
mandelbrot/include/: mandelbrot.cuh
mandelbrot/src/: cpu.cpp  cuda.cu  thread.cpp  uma.cu
matrix/: CMakeLists.txt
matrix/include/: matrix.cuh
matrix/src/: cpu.cpp  cuda.cu  thread.cpp  uma.cu
memory/: CMakeLists.txt
memory/include/: memory.cuh
memory/src/: convert.cu  explicit.cu  kernel.cu  pinned.cu  unified.cu  zero_copy.cu
profile/: explicit.nsys-rep  explicit.txt  pinned.nsys-rep  pinned.txt  unified.nsys-rep  unified.txt  zero-copy.nsys-rep  zero-copy.txt
tests/: CMakeLists.txt  matrix_test.cu  memory_test.cu
utils/: CMakeLists.txt
utils/include/: debug.hpp  gen.hpp
utils/src/: gen.cpp
